# struct_mapping

./: .gitignore  CMakeLists.txt  changelog.md  license.txt  readme.md  readme_ru.md
example/: CMakeLists.txt
example/array/: array.cpp
example/array_like/: array_like.cpp
example/base/: base.cpp
example/containers/: containers.cpp
example/enhanced/: enhanced.cpp
example/enumeration/: enumeration.cpp
example/how_it_work/: how_it_work.cpp
example/how_it_works/: how_it_works.cpp
example/in_struct_reg/: in_struct_reg.cpp
example/macro_reg/: macro_reg.cpp
example/map/: map.cpp
example/map_like/: map_like.cpp
example/optional/: optional.cpp
example/options/: options.cpp
example/options_default/: options_default.cpp
example/person/: person.cpp
example/simple/: simple.cpp
example/struct/: struct.cpp
example/struct_from_string/: struct_from_string.cpp
example/struct_to_json/: struct_to_json.cpp
include/struct_mapping/: debug.h  exception.h  f.h  f_array.h  f_array_like.h  f_map.h  f_map_like.h  f_struct.h  functions.h  iterate_over.h  mapper.h  member.h  member_string.h  object.h  object_array_like.h  object_map_like.h  parser.h  reset.h  struct_mapping.h  utility.h
include/struct_mapping/managed/: array.h  fs.h  struct.h
include/struct_mapping/mapper/: json.h
include/struct_mapping/options/: option_bounds.h  option_default.h  option_not_empty.h  option_required.h
include/struct_mapping/parser/: json.h
test/: CMakeLists.txt  main.cpp  managed_array.cpp  managed_struct.cpp  map_json_to_struct.cpp  map_json_to_struct_test.cpp  map_struct_to_json.cpp  map_struct_to_json_test.cpp  mapper_json.cpp  mapper_map_json_to_struct.cpp  mapper_map_struct_to_json.cpp  option_bounds.cpp  option_bounds_test.cpp  option_default.cpp  option_default_test.cpp  option_not_empty.cpp  option_not_empty_test.cpp  option_required.cpp  option_required_test.cpp  optional.cpp  optional_test.cpp  parser.cpp  parser_json.cpp  parser_test.cpp
